--- a/output/My-first-post.html
+++ b/output/My-first-post.html
@@ -118,7 +118,7 @@
 </div>
 </div>
         </div><!--/span-->
-        <div class="span3 well sidebar-nav" id="sidebar">
+        <div class="span3 well sidebar-nav" id="sidebar" style="position:absolute;right:200px;top:200px">
 <ul class="nav nav-list">
 <li class="nav-header"><h4><i class="icon-external-link"></i>blogroll</h4></li>
     <li><div><i class="icon-external-link"></i><a href="http://getpelican.com/">Pelican</a></div></li>
